# russianaicup18

./: .gitignore  README.md
src/: CMakeLists.txt  Const.cpp  Const.h  DefaultRunner.cpp  Move.cpp  Move.h  MyStrategy.cpp  MyStrategy.h  QuickStartGuy.cpp  QuickStartGuy.h  RemoteProcessClient.cpp  RemoteProcessClient.h  Runner.cpp  Runner.h  Scenario.h  Simulation.cpp  Simulation.h  Solution.cpp  Solution.h  State.cpp  State.h  Static.cpp  Static.h  Team.cpp  Team.h  Vec.cpp  Vec.h  Vis.cpp  Vis.h  main.cpp  simulation.txt
vis/: build.gradle  gradle.properties  test-log.txt
vis/src/vis/: DoubleGraphics2D.kt  GameData.kt  StepData.kt  VisualState.kt  VisualizerFrame.kt  constants.kt  control.kt  data.kt  draw.kt  main.kt  util.kt
vis/src/vis/test/: testGameStates.kt
